<resources>
    <string name="app_name">Insaniyat</string>

    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="ambulance">Ambulance</string>
    <string name="mealdonation">Meal Donation</string>
    <string name="monetarydonation">Monetary Donation</string>
    <string name="bloodDonation">Blood Donation</string>
    <string name="user">User</string>
    <string name="userHome">User Home</string>
    <string name="heading">Welcome to Insaniyat!</string>
    <string name="loginUser">User Login</string>
    <string name="signupUser">User Registeration</string>
    <string name="RandomMealDonation">Random Meal Donation</string>
    <string name="dastarkhwan">Dastarkhwan</string>
    <string name="mealdonate">Donate Meal</string>
    <string name="servings">Number of servings</string>
    <string name="date">Date</string>
    <string name="insaniyat">Insaniyat</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="randMealDonation">Donate to anyone</string>
    <string name="send">Send</string>
    <string name="quantity">Quantity</string>
    <string name="type">Item Type</string>
    <string name="vMealDonation">Donate to Volunteer</string>
    <string name="deadbodyName">Dead body\'s name</string>
    <string name="deathDate">Date of death in dd/mm/yyyy</string>
    <string name="welfare">Welfare</string>
    <string name="volunteer">Volunteer</string>
    <string name="locationNote">Your current location would be the pickup location.</string>
    <string name="morgue">Morgue</string>
    <string name="donation">Donation</string>
    <string name="moneydonation">Money Donation</string>
    <string name="donationAmount">Enter amount</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="access_token">pk.eyJ1IjoiYW5hc2ZhaXNhbCIsImEiOiJja2F4dmJwOW0wYTJlMndvMnFqZWI4eHlqIn0.9Gfh0hWjypSmO6aT84FxHw</string>
    <string name="user_location_permission_explanation">Location required</string>
    <string name="user_location_permission_not_granted">Location not granted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="submit">Submit</string>
    <string name="volunteerdonation">Volunteer Donation</string>
    <string name="welfaredonation">Welfare Donation</string>
    <string name="qoute">"There is no religion greater than humanity" - Abdul Sattar Eidhi.</string>

    <string name="channel_name">Channel1</string>
    <string name="channel_description">Channel1_Description</string>
</resources>