<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MorgueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MorgueActivity"
        android:orientation="vertical"
        android:background="@color/darkblue">


        <LinearLayout
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/darkblue"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/name"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:ems="15"/>

            <EditText
                android:id="@+id/bodyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/deadbodyName"
                style="@style/hint"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="10dp"
                android:inputType="textPersonName"
                android:ems="15"/>
            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint= "@string/deathDate"
                style="@style/hint"
                android:drawableLeft="@drawable/ic_date_range_white_24dp"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:ems="15"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                style="@style/hint"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:inputType="phone"
                android:ems="15"/>
            <Button
                android:id="@+id/submitWelfare"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                android:ems="10"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>