<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteerMealDonationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/darkblue">

        <EditText
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/servings"
            android:inputType="number"
            android:ems="10"
            style="@style/hint"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_format_list_numbered_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/submitWelfare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:ems="10"
            android:textColor="@color/white"
            android:background="@drawable/button_border"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationNote"
            style="@style/hint"/>

        <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>