<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".WelfareMealDonationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_format_list_numbered_24"
            android:drawablePadding="10dp"
            android:hint="@string/servings"
            android:inputType="number"
            android:ems="10"
            style="@style/hint"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_gravity="center_horizontal">

            <Spinner
                    android:id="@+id/dastarkhwanSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/headingBlack"
                />

        </LinearLayout>

            <Button
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:ems="10"
                android:id="@+id/dastarkhwanSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:background="@drawable/button_border"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationNote"
                style="@style/hint"/>
            <ProgressBar
                android:layout_marginTop="10dp"
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

</FrameLayout>